:sparkles: Add pathway filter on eventHierarchy